--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "AI-powered clinical documentation platform for therapists - HIPAA compliant",
   "private": true,
   "type": "module",
+  "homepage": "https://deadpool00.github.io/easythera-notes",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "gh-pages": "^6.1.0"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist"
   }
 }
